--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gulp-2023",
   "version": "1.0.0",
+  "homepage": "https://artiomkochkin.github.io/CoDe/",
   "description": "",
   "main": "gulpfile.js",
   "type": "module",
@@ -8,7 +9,8 @@
     "dev": "gulp",
     "build": "gulp build --build",
     "zip": "gulp deployZIP --build",
-    "svgSprive": "gulp svgSprive"
+    "svgSprive": "gulp svgSprive",
+    "deploy": "gulp build --build && gh-pages -d dist"
   },
   "author": "Artiom-Kochkin",
   "license": "ISC",
@@ -43,5 +45,8 @@
     "webp-converter": "2.2.3",
     "webpack": "^5.88.2",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
